[package]
name = "e2e-runner"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
glob = "0.3"
fake-opamp-server = { path = "../crates/fake-opamp-server" }
oci-test-utils = { path = "../crates/oci-test-utils" }
oci-client = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-saphyr.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[[bin]]
name = "e2e-runner"
path = "src/main.rs"
