[package]
name = "oci-test-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
oci-client = { workspace = true, features = ["rustls-tls"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt-multi-thread"] }
actix-web = { workspace = true }
